apps/kubevirt-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubevirt-manager
  namespace: flux-system
  labels:
    app: kubevirt-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubevirt-manager
  template:
    metadata:
      labels:
        app: kubevirt-manager
    spec:
      serviceAccountName: kubevirt-manager
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: kubevirt-manager
        image: kubevirtmanager/kubevirt-manager:latest
        ports:
        - containerPort: 80
          hostPort: 80
          protocol: TCP
        - containerPort: 443
          hostPort: 443
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kubevirt-manager
  namespace: flux-system
spec:
  selector:
    app: kubevirt-manager
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
